# solde

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  alembic.ini  dev.ps1  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  docker.yml
backend/: config.py  database.py  main.py
backend/alembic/: env.py
backend/models/: accounting_account.py  accounting_entry.py  accounting_rule.py  app_comment.py  app_settings.py  audit_log.py  bank.py  cash.py  chat_log.py  contact.py  fiscal_year.py  import_log.py  import_run.py  invoice.py  payment.py  salary.py  types.py  user.py
backend/routers/: accounting_account.py  accounting_entry.py  accounting_rule.py  app_comment.py  auth.py  bank.py  cash.py  chat.py  contact.py  dashboard.py  excel_import.py  fiscal_year.py  invoice.py  payment.py  salary.py  settings.py
backend/schemas/: accounting_account.py  accounting_entry.py  accounting_rule.py  app_comment.py  auth.py  bank.py  cash.py  chat.py  contact.py  fiscal_year.py  invoice.py  payment.py  salary.py  settings.py
backend/services/: accounting_account.py  accounting_engine.py  accounting_entry_service.py  accounting_rule_service.py  app_comment_service.py  audit_service.py  auth.py  backup_service.py  bank_import.py  bank_service.py  cash_service.py  chat_service.py  (+23 more)
doc/: README.md  architecture.md  backlog.md  import-excel-plan.md  plan-reprise-post-imp.md  plan.md  recette.md  roadmap.md
frontend/: README.md  env.d.ts  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
scripts/: import_addresses_from_docx.py  run_excel_convergence_preview.py
tests/: conftest.py
(+314 files in other folders)
