[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "solde"
version = "0.1.0"
description = "Web app for French non-profit accounting — invoicing, payments, cash management and double-entry bookkeeping."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "alembic>=1.13",
    "pydantic[email]>=2.0",
    "pydantic-settings>=2.0",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.0",
    "python-multipart>=0.0.9",
    "jinja2>=3.1",
    "aiofiles>=23.0",
    "weasyprint>=62.0",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-python-jose",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.11"
strict = false
plugins = ["pydantic.mypy"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "backend.services.*"
strict = true

[[tool.mypy.overrides]]
module = "tests.*"
disable_error_code = [
    "arg-type",
    "attr-defined",
    "comparison-overlap",
    "misc",
    "no-any-return",
    "no-untyped-def",
    "type-arg",
    "type-var",
    "union-attr",
    "unused-ignore",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=backend --cov-report=term-missing"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.coverage.run]
omit = ["tests/*", "backend/alembic/*"]
